# underwriting-copilot

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  app.py  launch_claude.sh  pyproject.toml
.streamlit/: config.toml
corpus/: bm25_vocab.json  corpus_metadata.toml
corpus/synthetic/: README.md  sycamore_delegated_authority_matrix.md  sycamore_risk_appetite_statement.md  sycamore_thermal_coal_underwriting_policy.md
docs/: PROJECT_BRIEF.md  architecture.md  backlog.md  charter.md  decisions.md  evaluation.md  governance.md  journal.md  open_questions.md  philosophy.md  security.md  status.md
eval/: __init__.py  benchmark.toml  compare.py  prompts.py  report.py  rescore.py  runner.py  scorer.py
eval/results/2026-06-18T15-32-07Z/: manifest.toml  raw.jsonl  raw_rescored.jsonl  report.md  run_meta.json
publications/underwriting_copilot/: _quarto.yml  index.qmd
scripts/probes/: 01_docling_corpus_sweep.py  02_validate_metadata.py  03_section_sizes.py  04_noise_audit.py  05_cleanup_audit.py  06_chunking_audit.py  07_bge_m3_sanity.py  08_qdrant_local_sanity.py  q13_baseline_misses.py  q13_strict_misses_with_text.py  q14_hyde_prompt_probe.py  q15_chunk_text_review.py
src/underwriting_copilot/: __init__.py  answer.py  bm25.py  chunking.py  cleanup.py  embed.py  index.py  metadata.py  query_rewriter.py  retrieve.py
tests/: test_answer.py  test_app.py  test_bm25.py  test_chunking.py  test_cleanup.py  test_embed.py  test_index.py  test_query_rewriter.py  test_report.py  test_retrieve.py  test_runner.py  test_scorer.py  test_smoke.py
(+19 files in other folders)
